# SpaceApps2017

./: .gitignore  PITCHME.md  Readme.rst  TODO.rst  requirements.txt  setup.cfg
flyby/: IWG1.xml  __init__.py  flight_assets.py  test.py
flyby/data_gather/: __init__.py  nasa_flights.py
flyby/models/: flights.py
frontend/: README.md  index.html  package.json  webpack.config.js
frontend/src/: main.js
frontend/src/components/: DateRangeInput.vue  FlightView.vue  Heatmap.vue  Navbar.vue
frontend/src/config/: routes.js
frontend/src/containers/: Home.vue
frontend/src/services/: data-service.js  map-service.js
frontend/src/store/: index.js  mutation-types.js
frontend/src/store/modules/: flights.js
frontend/src/styles/: _mixins.scss  date-range-input.scss  home.scss  navbar.scss  style.scss
