[metadata]
name = flyby
summary = Flyby SpaceApps zaragoza
description-file = Readme.rst
home-page = https://github.com/<team>/flyby

[files]
packages =
    flyby

[entry_points]
console_scripts =
    flyby = flyby:run
    nasa_to_flyby = flyby.data_gather:nasa_to_flyby
    opensky_to_flyby = flyby.data_gather:opensky_to_flyby
    openflights_to_flyby = flyby.data_gather:openflights_to_flyby
